--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -1,59 +1,33 @@
-name: trojai-example
+name: round7
 channels:
-  - pytorch
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - blas=1.0=mkl
-  - ca-certificates=2021.1.19=h06a4308_0
+  - ca-certificates=2021.4.13=h06a4308_1
   - certifi=2020.12.5=py38h06a4308_0
-  - cudatoolkit=11.0.221=h6bb024c_0
-  - freetype=2.10.4=h5ab3b9f_0
-  - intel-openmp=2020.2=254
-  - jpeg=9b=h024ee3a_2
-  - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_1
-  - libuv=1.40.0=h7b6447c_0
-  - lz4-c=1.9.3=h2531618_0
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py38he904b0f_0
-  - mkl_fft=1.2.0=py38h23d657b_0
-  - mkl_random=1.1.1=py38h0573a6f_0
   - ncurses=6.2=he6710b0_1
-  - ninja=1.10.2=py38hff7bd54_0
-  - numpy=1.19.2=py38h54aff64_0
-  - numpy-base=1.19.2=py38hfa32c7d_0
-  - olefile=0.46=py_0
-  - openssl=1.1.1i=h27cfd23_0
-  - pillow=8.1.0=py38he98fc37_0
-  - pip=20.3.3=py38h06a4308_0
-  - python=3.8.5=h7579374_1
-  - pytorch=1.7.0=py3.8_cuda11.0.221_cudnn8.0.3_0
+  - openssl=1.1.1k=h27cfd23_0
+  - pip=21.0.1=py38h06a4308_0
+  - python=3.8.8=hdb3f193_5
   - readline=8.1=h27cfd23_0
   - setuptools=52.0.0=py38h06a4308_0
-  - six=1.15.0=py38h06a4308_0
-  - sqlite=3.33.0=h62c20be_0
+  - sqlite=3.35.4=hdfb4753_0
   - tk=8.6.10=hbc83047_0
-  - torchvision=0.8.0=py38_cu110
-  - typing_extensions=3.7.4.3=pyha847dfd_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
-  - zstd=1.4.5=h9ceee32_0
   - pip:
-    - absl-py==0.11.0
+    - absl-py==0.12.0
     - advertorch==0.2.3
     - albumentations==0.5.2
     - blend-modes==2.1.0
     - blis==0.7.4
     - cachetools==4.2.1
-    - catalogue==2.0.1
+    - catalogue==2.0.3
     - chardet==4.0.0
     - click==7.1.2
     - cloudpickle==1.6.0
@@ -63,31 +37,33 @@ dependencies:
     - decorator==4.4.2
     - filelock==3.0.12
     - future==0.18.2
-    - google-auth==1.26.1
-    - google-auth-oauthlib==0.4.2
-    - grpcio==1.35.0
+    - google-auth==1.29.0
+    - google-auth-oauthlib==0.4.4
+    - grpcio==1.37.0
     - idna==2.10
     - imageio==2.9.0
     - imgaug==0.4.0
     - jinja2==2.11.3
     - joblib==1.0.1
     - jsonpickle==2.0.0
-    - kaggle==1.5.10
+    - kaggle==1.5.12
     - kiwisolver==1.3.1
-    - markdown==3.3.3
+    - markdown==3.3.4
     - markupsafe==1.1.1
-    - matplotlib==3.3.4
+    - matplotlib==3.4.1
     - murmurhash==1.0.5
-    - networkx==2.5
-    - nltk==3.5
+    - networkx==2.5.1
+    - nltk==3.6.1
+    - numpy==1.20.2
     - oauthlib==3.1.0
     - opencv-python==4.5.1.48
     - opencv-python-headless==4.5.1.48
     - packaging==20.9
-    - pandas==1.2.2
+    - pandas==1.2.4
     - pathy==0.4.0
+    - pillow==8.2.0
     - preshed==3.0.5
-    - protobuf==3.14.0
+    - protobuf==3.15.8
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pydantic==1.7.3
@@ -98,35 +74,37 @@ dependencies:
     - pytz==2021.1
     - pywavelets==1.1.1
     - pyyaml==5.4.1
-    - regex==2020.11.13
+    - regex==2021.4.4
     - requests==2.25.1
     - requests-oauthlib==1.3.0
-    - rsa==4.7.1
-    - sacremoses==0.0.43
+    - rsa==4.7.2
+    - sacremoses==0.0.44
     - scikit-image==0.18.1
     - scikit-learn==0.24.1
-    - scipy==1.6.0
+    - scipy==1.6.2
     - shapely==1.7.1
+    - six==1.15.0
     - smart-open==3.0.0
-    - spacy==3.0.3
-    - spacy-legacy==3.0.1
-    - srsly==2.4.0
-    - tb-nightly==2.5.0a20210216
-    - tensorboard-data-server==0.3.0
+    - spacy==3.0.5
+    - spacy-legacy==3.0.2
+    - srsly==2.4.1
+    - tb-nightly==2.5.0a20210415
+    - tensorboard-data-server==0.6.0
     - tensorboard-plugin-wit==1.8.0
     - text-unidecode==1.3
-    - thinc==8.0.1
+    - thinc==8.0.2
     - threadpoolctl==2.1.0
-    - tifffile==2021.2.1
-    - tokenizers==0.9.4
+    - tifffile==2021.4.8
+    - tokenizers==0.10.2
+    - torch==1.7.0
     - torchtext==0.8.0
-    - tqdm==4.56.2
-    - transformers==4.2.1
-    - trojai==0.2.18
+    - torchvision==0.8.0
+    - tqdm==4.60.0
+    - transformers==4.5.1
     - typer==0.3.2
-    - urllib3==1.26.3
-    - wand==0.6.5
+    - typing-extensions==3.7.4.3
+    - urllib3==1.26.4
+    - wand==0.6.6
     - wasabi==0.8.2
     - werkzeug==1.0.1
-prefix: /home/mmajurski/anaconda3/envs/trojai-example
-
+prefix: /home/user/anaconda3/envs/round7
