--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -11,50 +11,52 @@ dependencies:
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - ncurses=6.4=h6a678d5_0
-  - openssl=3.0.9=h7f8727e_0
-  - pip=23.1.2=py38h06a4308_0
-  - python=3.8.17=h955ad1f_0
+  - openssl=3.0.10=h7f8727e_2
+  - pip=23.2.1=py39h06a4308_0
+  - python=3.9.17=h955ad1f_0
   - readline=8.2=h5eee18b_0
-  - setuptools=67.8.0=py38h06a4308_0
+  - setuptools=68.0.0=py39h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
-  - wheel=0.38.4=py38h06a4308_0
+  - tzdata=2023c=h04d1e81_0
+  - wheel=0.38.4=py39h06a4308_0
   - xz=5.4.2=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
-      - atari-py==0.2.9
       - attrs==23.1.0
-      - cloudpickle==1.2.2
+      - certifi==2022.12.7
+      - charset-normalizer==2.1.1
+      - cloudpickle==2.2.1
+      - farama-notifications==0.0.4
       - filelock==3.9.0
-      - future==0.18.3
-      - gym==0.15.3
-      - gym-minigrid==1.0.2
-      - importlib-resources==6.0.0
+      - gym==0.26.2
+      - gym-notices==0.0.8
+      - gymnasium==0.29.1
+      - idna==3.4
+      - importlib-metadata==6.8.0
       - jinja2==3.1.2
-      - joblib==1.3.1
-      - jsonargparse==4.22.1
-      - jsonpickle==3.0.1
-      - jsonschema==4.18.3
-      - jsonschema-specifications==2023.6.1
+      - joblib==1.3.2
+      - jsonpickle==3.0.2
+      - jsonschema==4.19.0
+      - jsonschema-specifications==2023.7.1
       - markupsafe==2.1.2
+      - minigrid==2.3.0
       - mpmath==1.2.1
       - networkx==3.0
-      - numpy==1.17.4
-      - opencv-python==4.8.0.74
-      - pkgutil-resolve-name==1.3.10
-      - pyglet==1.3.2
-      - pyyaml==6.0
-      - referencing==0.29.1
-      - rpds-py==0.8.10
-      - scikit-learn==1.1.2
-      - scipy==1.8.1
-      - six==1.16.0
+      - numpy==1.25.2
+      - opencv-python==4.8.0.76
+      - pillow==9.3.0
+      - pygame==2.5.1
+      - referencing==0.30.2
+      - requests==2.28.1
+      - rpds-py==0.9.2
+      - scikit-learn==1.3.0
+      - scipy==1.11.2
       - sympy==1.11.1
       - threadpoolctl==3.2.0
       - torch==2.0.1+cpu
-      - torch-ac==1.1.0
-      - tqdm==4.65.0
-      - trojai-rl==0.1.1
+      - torchvision==0.15.2+cpu
       - typing-extensions==4.4.0
-      - zipp==3.16.1
+      - urllib3==1.26.13
+      - zipp==3.16.2
 prefix: /home/mmajurski/miniconda3/envs/trojai-example
