--- a/metaparameters.yml
+++ b/metaparameters.yml
@@ -1,5 +1,7 @@
 
-optimizer_class: "SGD"
+optimizer_class: "AdamW"
 loss_class: "CrossEntropyLoss"
-learning_rate: 0.01
+learning_rate: 0.0001
 epochs: 1
+ckpt_every: 1
+ckpt_dir: "./ckpts"
