--- a/metaparameters.yml
+++ b/metaparameters.yml
@@ -8,6 +8,10 @@ model_parameters:
   model_dtype: float16
   fp16: False
 
+learning_rate: 5e-5
+num_train_epochs: 5.0
+optim: adamw_torch
+
 batch_size: 4
 device: cuda
 num_workers: 8
