--- a/metaparameters.yml
+++ b/metaparameters.yml
@@ -3,10 +3,9 @@ lora_parameters:
   r: 8
   lora_alpha: 8
   lora_dropout: 0.05
-  # different types of lora config
 
 model_parameters:
-  model_dtype: float16
+  model_dtype: bfloat16
 
 learning_rate: 5e-5
 num_train_epochs: 5.0
@@ -15,4 +14,4 @@ optim: adamw_torch
 batch_size: 4
 device: cuda
 num_workers: 8
-fp16: True
+bf16: True
