--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ torchvision
 tqdm
 configargparse
 numpy
-transformers
+transformers==4.41.2
 peft
 datasets
 pyyaml
 nvidia-ml-py3
 trl
-flash-attn
+#flash-attn
+jsonschema
